# bookstore

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  drf_config.py  fix_remaining_errors.sh  mypy.ini  pyproject.toml  settings.py
.github/workflows/: build.yml  github-actions-demo.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py  models.py
order/migrations/: 0001_initial.py  0002_order_created_at_order_quantity.py
order/models/: __init__.py  order.py
order/serializers/: __init__.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: __init__.py  product_viewset.py
